--- a/point-patterns-python/point_patterns-python--german.ipynb
+++ b/point-patterns-python/point_patterns-python--german.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyse der WIFI-Hotspots in Linz \n",
-    "\n",
-    "*Ein Point-Pattern-Analyse von Lukas Boeck, 1710277054*"
+    "## Analyse der WIFI-Hotspots in Linz "
    ]
   },
   {
