--- a/dimred-exploration/dimred_on_mnist.ipynb
+++ b/dimred-exploration/dimred_on_mnist.ipynb
@@ -43,7 +43,7 @@
     "mnist = tf.keras.datasets.mnist\n",
     "\n",
     "(x_train, y_train),(x_test, y_test) = mnist.load_data()\n",
-    "x_train, x_test = x_train / 255.0, x_test / 255.0"
+    "x_train, x_test = x_train / 255.0, x_test / 255.0 #min-max scaling"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Features already min-max scaled. "
+    "Features min-max scaled by division / 255."
    ]
   },
   {
